kubernetes/assets/mkdocs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkdocs
  template:
    metadata:
      labels:
        app: mkdocs
    spec:
      containers:
        - name: mkdocs
          image: minidocks/mkdocs:1
          command:
            - mkdocs
          args:
            - serve
            - --dev-addr=0.0.0.0:8000
            - --config-file=/config/mkdocs.yml
          volumeMounts:
            - name: config
              mountPath: /config
            - name: docs
              mountPath: /docs
      volumes:
        - name: config
          configMap:
            name: mkdocs-config
            defaultMode: 420
        - name: docs
          emptyDir: {}
