kubernetes/assets/mkdocs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mkdocs
spec:
  selector:
    app: mkdocs
  ports:
    - port: 8000
      protocol: TCP
  type: ClusterIP
